Fixed footer overlap and resized page boxes

--- a/src/CSS/index.css
+++ b/src/CSS/index.css
@@ -6,6 +6,7 @@
     margin-top: 40px;
     column-gap: 0px;
     row-gap: 40px;
+    margin-bottom: 40px;
   }
   .page_box{
     margin: auto !important;
